# Multilingual_Rag

./: .env.example  .gitignore  HSC26-Bangla1st-Paper.txt  README.md  app.py  pyproject.toml  rag.ipynb
chunks_24_output/: chunk_1.txt  chunk_10.txt  chunk_11.txt  chunk_12.txt  chunk_13.txt  chunk_14.txt  chunk_15.txt  chunk_16.txt  chunk_17.txt  chunk_18.txt  chunk_2.txt  chunk_3.txt  chunk_4.txt  chunk_5.txt  chunk_6.txt  chunk_7.txt  chunk_8.txt  chunk_9.txt
clean_chunks_24_output/: chunk_1.txt  chunk_10.txt  chunk_11.txt  chunk_12.txt  chunk_13.txt  chunk_14.txt  chunk_15.txt  chunk_16.txt  chunk_17.txt  chunk_18.txt  chunk_2.txt  chunk_3.txt  chunk_4.txt  chunk_5.txt  chunk_6.txt  chunk_7.txt  chunk_8.txt  chunk_9.txt
project_rag_24_jul/docstore/: 039679c1-35ff-4b6e-8f6e-1ea54c045b6a  158753dc-0998-4d8c-a3a7-a91972ff72ea  4009b27b-8c58-4d22-a5da-785f352e5dad  54068ede-65b3-4c72-b3cd-e32258620162  76e074ba-6f27-42ed-9114-94b952bbd471  7d9ba605-4ac0-4930-99bb-beecdd4e5ea2  850c598b-ed11-4317-90a8-9e3427cbb919  96a5d4d9-d195-44dd-ba64-25707bc5814d  9aca1c0a-a732-4d1b-8c08-be4b5e77655b  a786eede-de1c-4f71-8821-ab40d0cd7b46  b159610d-d6f7-48ff-9e4d-e2c0ac23f48e  b75cd703-fa6f-4b41-ae0c-d5d4738e3aa9  bb09476d-dabd-4320-aecb-7274cb1cc70e  c14421fa-79ad-49f8-9ae6-859f31d10b61  c7ba7aa1-422a-49af-a406-d3e63893b76e  e31d486f-dd19-4e05-b7b7-71b53a419f19  f223f702-b795-44d4-8e0c-17d3dfb04f0e  fc727f2d-96b8-4b3b-af85-89cf3cfa6a42
project_rag_24_jul/faiss_index/: index.faiss  index.pkl
